--- a/package.json
+++ b/package.json
@@ -15,16 +15,13 @@
     "moment": "^2.30.1",
     "rc-progress": "^4.0.0",
     "react": "^18.3.1",
-    "react-clock": "^5.0.0",
     "react-countdown": "^2.3.6",
-    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-switch": "^7.0.0",
-    "react-table": "^7.8.0",
-    "react-time-picker": "^7.0.0",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
