--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-switch": "^7.0.0",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
